--- a/app/src/main/res/layout/fragment_ejercicio_general_categorias.xml
+++ b/app/src/main/res/layout/fragment_ejercicio_general_categorias.xml
@@ -22,7 +22,7 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.884"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/textViewQuestion"
+            app:layout_constraintTop_toBottomOf="@+id/textViewPrompt"
             app:layout_constraintVertical_bias="0.568" />
 
         <TextView
@@ -35,7 +35,7 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/textViewQuestion"
+            app:layout_constraintTop_toBottomOf="@+id/textViewPrompt"
             app:layout_constraintVertical_bias="0.566" />
 
         <TextView
@@ -48,7 +48,7 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/textViewQuestion"
+            app:layout_constraintTop_toBottomOf="@+id/textViewPrompt"
             app:layout_constraintVertical_bias="0.221" />
 
         <Spinner
@@ -61,7 +61,7 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.89"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/textViewQuestion"
+            app:layout_constraintTop_toBottomOf="@+id/textViewPrompt"
             app:layout_constraintVertical_bias="0.206" />
 
         <Spinner
@@ -74,7 +74,7 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.887"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/textViewQuestion"
+            app:layout_constraintTop_toBottomOf="@+id/textViewPrompt"
             app:layout_constraintVertical_bias="0.382" />
 
         <TextView
@@ -87,15 +87,15 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/textViewQuestion"
+            app:layout_constraintTop_toBottomOf="@+id/textViewPrompt"
             app:layout_constraintVertical_bias="0.389" />
 
         <TextView
-            android:id="@+id/textViewQuestion"
+            android:id="@+id/textViewPrompt"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/general_categorias_pregunta"
-            android:textSize="@dimen/question_text_size"
+            android:textSize="@dimen/prompt_text_size"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="@fraction/question_horizontal_bias"
@@ -113,7 +113,7 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.894"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/textViewQuestion"
+            app:layout_constraintTop_toBottomOf="@+id/textViewPrompt"
             app:layout_constraintVertical_bias="0.034" />
 
         <TextView
@@ -126,7 +126,7 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="@fraction/answer_group_horizontal_bias"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/textViewQuestion"
+            app:layout_constraintTop_toBottomOf="@+id/textViewPrompt"
             app:layout_constraintVertical_bias="@fraction/answer_group_vertical_bias" />
 
         <Button
@@ -139,7 +139,7 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.876"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/textViewQuestion"
+            app:layout_constraintTop_toBottomOf="@+id/textViewPrompt"
             app:layout_constraintVertical_bias="0.777" />
 
 
