--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -2,7 +2,8 @@
 <resources>
     <dimen name="layout_margin">15dp</dimen>
 
-    <dimen name="question_text_size">25sp</dimen>
+    <dimen name="prompt_text_size">25sp</dimen>
+    <dimen name="clause_text_size">20sp</dimen>
     <dimen name="answer_text_size">20sp</dimen>
     <dimen name="button_submit_text_size">20sp</dimen>
 
