--- a/app/src/main/res/layout/fragment_ejercicio_diptongo_hiato.xml
+++ b/app/src/main/res/layout/fragment_ejercicio_diptongo_hiato.xml
@@ -79,7 +79,7 @@
             app:layout_constraintVertical_bias="0.065" />
 
         <RadioGroup
-            android:id="@+id/radioGroup"
+            android:id="@+id/radioGroupDiptongoHiato"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
@@ -135,7 +135,7 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/radioGroup"
+            app:layout_constraintTop_toBottomOf="@+id/radioGroupDiptongoHiato"
             app:layout_constraintVertical_bias="0.024" />
 
 
