--- a/app/src/main/res/layout/fragment_main_menu.xml
+++ b/app/src/main/res/layout/fragment_main_menu.xml
@@ -23,39 +23,14 @@
             app:layout_constraintVertical_bias="0.08"
             app:srcCompat="@drawable/logoprovi" />
 
-        <Button
-            android:id="@+id/btnLecciones"
-            android:layout_width="181dp"
-            android:layout_height="54dp"
-            android:layout_marginTop="76dp"
-            android:text="@string/lecciones_btn"
+        <androidx.viewpager2.widget.ViewPager2
+            android:id="@+id/pager"
+            android:layout_width="257dp"
+            android:layout_height="298dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/imageView"
-            app:layout_constraintVertical_bias="0.0" />
-
-        <Button
-            android:id="@+id/btnPracticar"
-            android:layout_width="181dp"
-            android:layout_height="54dp"
-            android:text="@string/practicar_btn"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/btnLecciones"
-            app:layout_constraintVertical_bias="0.233" />
-
-        <Button
-            android:id="@+id/btnMinijuego"
-            android:layout_width="181dp"
-            android:layout_height="54dp"
-            android:text="@string/minijuego_btn"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/btnPracticar"
-            app:layout_constraintVertical_bias="0.322" />
+            app:layout_constraintTop_toTopOf="parent" />
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
