--- a/app/src/main/res/layout/fragment_casos_especiales.xml
+++ b/app/src/main/res/layout/fragment_casos_especiales.xml
@@ -11,13 +11,7 @@
         android:layout_height="match_parent"
         android:orientation="vertical">
 
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="100dp"
-            android:text="@string/lecciones_btn"
-            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
-            android:layout_gravity="center"
-            android:gravity="center"/>
+
 
         <TextView
             android:id="@+id/tvLecDescTitle"
@@ -41,10 +35,11 @@
                 android:layout_width="fill_parent"
                 android:layout_height="match_parent"
                 android:lines="10"
+
                 android:scrollbars="vertical"
                 android:scrollHorizontally="false"
                 android:text="@string/dummy_text"
-                android:textSize="15sp" />
+                android:textSize="18dp" />
 
         </ScrollView>
 
