--- a/app/src/main/res/layout/fragment_lecciones_main_menu_button.xml
+++ b/app/src/main/res/layout/fragment_lecciones_main_menu_button.xml
@@ -9,10 +9,24 @@
     <!-- TODO: Update blank fragment layout -->
 
 
-    <ImageButton
-        android:id="@+id/LeccImageButton"
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:src="@drawable/book"
-        />
+        android:orientation="vertical">
+
+        <ImageButton
+            android:id="@+id/LeccImageButton"
+            android:layout_width="match_parent"
+            android:layout_height="381dp"
+            android:src="@drawable/book" />
+
+        <TextView
+            android:id="@+id/tvOption"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/dummy_text"
+            android:textSize="40dp"
+            android:gravity="center"/>
+    </LinearLayout>
+
 </FrameLayout>
